[package]
name = "sqld-stresstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
hyper = { version = "0.14.27", features = ["full"] }
itertools = "0.11.0"
rand = "0.8.5"
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"
